minor change to js notification

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 </head>
 <body>
     <div class="info">
-    <span>X</span> <p>This web app uses 3rd party APIs. if app is not working for any reason it means the API must have changed causing breakage.<br> please contact author <a href="https://github.com/swagathushetty" target="_blank">swagath shetty</a> for rectification</p>
+       <span>X</span>
+     <p>
+         This web app uses 3rd party APIs. if app is not working for any reason it means the API must have changed causing breakage.<br> please contact author <a href="https://github.com/swagathushetty" target="_blank">swagath shetty</a> for rectification. <br>
+         there is also a limited no of requests that can be made each day. if that limit is crossed the app wont work and you will have to wait 24hrs
+    </p>
     </div>
+    
     <div class="container my-5 mx-auto">
     
         <h1 class="text-muted text-center my-4">Weather Ninja</h1>
